--- a/src/app/view/forget-password/forget-password.component.html
+++ b/src/app/view/forget-password/forget-password.component.html
@@ -20,6 +20,13 @@
                     <div class="form_row clearfix">
                         <label>Email<span class="indicates">*</span></label>
                         <input type="email" name="email" class="form-control textfield" ngModel>
+                         <ul class="error" *ngIf="errors['email']!=''" >
+                        <li *ngFor="let err of errors['email']" >
+                          {{err}}  
+
+                        </li>    
+
+                        </ul>
                     </div>
                     <div class="form_row ">
                         <button class="btn btn-info" type="submit">Save</button>
