--- a/src/app/view/reset-password/reset-password.component.html
+++ b/src/app/view/reset-password/reset-password.component.html
@@ -6,23 +6,16 @@
                     <a [routerLink]="['/']" title="wamasoftware" rel="home" class="trail-begin">Home</a>
                 </span> 
                 <span class="sep">»</span> 
-                <span class="trail-end">Change Password</span>
+                <span class="trail-end">Reset Password</span>
             </div>
         </div>
 
         <!-- start content part-->
         <div id="content" role="main" class="large-9 small-12 columns" jstcache="0">
-            <h1 class="page-title entry-title">Change Password</h1>
+            <h1 class="page-title entry-title">Reset Password</h1>
 
-            <form #changePasswordForm="ngForm" (ngSubmit)="updatePassword(changePasswordForm.value)">
+            <form #resetPasswordForm="ngForm" (ngSubmit)="resetPassword(resetPasswordForm.value)">
                 <div class="event-edit-form large-9 small-12 columns">
-                    <div class="form_row clearfix">
-                        <label>Current Password<span class="indicates">*</span></label>
-                        <input type="password" name="old_password" class="form-control textfield" ngModel>
-                        <ul class="error" *ngIf="errors['old_password']!=''" >
-                            <li *ngFor="let org_err of errors['old_password']">{{org_err}}</li>    
-                        </ul>  
-                    </div>
                     <div class="form_row clearfix">
                         <label>New Password<span class="indicates">*</span></label>
                         <input type="password" name="password" class="form-control textfield" ngModel>
