--- a/src/app/view/my-venues/my-venues.component.html
+++ b/src/app/view/my-venues/my-venues.component.html
@@ -14,6 +14,7 @@
 			<ng2-toasty [position]="'top-center'" ></ng2-toasty>
 			<div id="content" role="main" class="col-md-12 col-sm-12 columns">
 			  <h1 class="loop-title venue_btn">Venue <a class="btn btn-warning pull-right" href="" [routerLink]="['/venues-add']">Add Venue</a></h1>
+			  <p>{{showData}}</p>
 				<div class="form-group organization_div row"  *ngFor = "let venue of venueArr">
 					<div class="col-md-8">
 					  <div class="venue-logo col-sm-6" style="width: 30%;">
