--- a/src/app/view/blog-detail/blog-detail.component.html
+++ b/src/app/view/blog-detail/blog-detail.component.html
@@ -9,7 +9,7 @@
                     <a [routerLink]="['/']" title="wamasoftware" rel="home" class="trail-begin">Home</a>
                 </span> 
                 <span class="sep">»</span> 
-                <a href="" title="News">Blog</a>
+                <a [routerLink]="['/blog']" title="News">Blog</a>
                 <span class="sep">»</span>
                 <span class="trail-end">{{blogDetail.blog_title}}</span>
             </div>
