--- a/src/app/view/event/eventlist.component.html
+++ b/src/app/view/event/eventlist.component.html
@@ -5,7 +5,7 @@
                     <li [ngClass] = "{'active':(selectedIndex==1)}" class="tab-title" role="presentational"><a (click)="typeOfEvent('current',1)" role="tab" tabindex="2" aria-selected="false">Current Events</a></li>
                     <li [ngClass] = "{'active':(selectedIndex==2)}" class="tab-title" role="presentational"><a (click)="typeOfEvent('upcoming',2)" role="tab" tabindex="3" aria-selected="false">Upcoming Events</a></li>
                 </ul> 
-
+                <ng2-toasty [position]="'top-center'" ></ng2-toasty>
                 <div class="directory_manager_tab clearfix">
                     <div class="sort_options">
                         <ul class="view_mode viewsbox">
