--- a/src/app/view/layouts/footer/footer.component.html
+++ b/src/app/view/layouts/footer/footer.component.html
@@ -28,6 +28,7 @@
     <!-- .sidebar-wrap -->
 </aside>
 <ng2-toasty [position]="'top-center'" ></ng2-toasty>
+<loading-animate></loading-animate>
 <!-- Footer Start-->
 <div id="footer" class="clearfix">
     <section class="footer_top clearfix">
