--- a/src/app/view/event-detail/event-detail.component.html
+++ b/src/app/view/event-detail/event-detail.component.html
@@ -129,9 +129,9 @@
                            
                             <li>
 
-                             <a *ngIf = "getToken" class="small_btn tmpl_mail_friend"  data-toggle="modal" data-target="#sendEvent" data-reveal-id="tmpl_send_to_frd" href="javascript:void(0);" id="send_friend_id" title="Mail to a friend">Send to friend</a>
+                             <a *ngIf = "getToken" class="small_btn tmpl_mail_friend"  data-toggle="modal" data-target="#sendEvent" data-reveal-id="tmpl_send_to_frd" href="javascript:void(0);" id="send_friend_id" title="Mail to a friend">Invite a Friend</a>
 
-                             <a *ngIf = "!getToken" class="small_btn tmpl_mail_friend"  data-toggle="modal" data-target="#loginModal" data-reveal-id="tmpl_send_to_frd" href="javascript:void(0);" id="send_friend_id" title="Mail to a friend">Send to friend</a>
+                             <a *ngIf = "!getToken" class="small_btn tmpl_mail_friend"  data-toggle="modal" data-target="#loginModal" data-reveal-id="tmpl_send_to_frd" href="javascript:void(0);" id="send_friend_id" title="Mail to a friend">Invite a Friend</a>
 
                             </li>
 
@@ -726,7 +726,7 @@
                 <div class="modal-content">
                    <div class="modal-header">
         <button type="button" id="send_btn_close" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">Send to friend</h4>
+        <h4 class="modal-title" id="myModalLabel">Invite a Friend</h4>
               </div>  
                <form #sendFriendForm="ngForm" (ngSubmit)="sendFriend(sendFriendForm.value)">
                 <div class="modal-body">
