--- a/src/app/view/event-edit/event-edit.component.html
+++ b/src/app/view/event-edit/event-edit.component.html
@@ -21,41 +21,56 @@
                     <div class="form_row clearfix">
                         <label>Event Title<span class="indicates">*</span></label>
                         <input type="text" [(ngModel)]="showEventArr.event_title" id="event-title" name="event_title" value="" class="form-control textfield" > 
-                        <span class="errfield">{{title}}</span>  
+                       <ul class="error" *ngIf="errors['event_title']!=''" >
+                                <li *ngFor="let org_err of errors['event_title']">{{org_err}}</li>    
+                            </ul>
                     </div>
                     <div class="form_row clearfix">
                         <label>Event Description<span class="indicates">*</span></label>
-                        <textarea [(ngModel)]="showEventArr.event_description" name="event_description" id="event-description" value="" rows="5" cols="6" class="textfield" style="height: 194px;" > </textarea>
-                        <span class="errfield">{{description}}</span> 
+                       <!--  <textarea [(ngModel)]="showEventArr.event_description" name="event_description" id="event-description" value="" rows="5" cols="6" class="textfield" style="height: 194px;" > </textarea> -->
+                        <ckeditor name="event_description" [(ngModel)]="showEventArr.event_description" debounce="400"></ckeditor>
+                        <ul class="error" *ngIf="errors['event_description']!=''" >
+                                <li *ngFor="let org_err of errors['event_description']">{{org_err}}</li>    
+                            </ul>
                     </div>
                     <div class="form_row clearfix">
                         <label>Start Date<span class="indicates">*</span></label>                                         
                         <my-date-picker [options]="myDatePickerOptions" (dateChanged)="onDateChanged($event,'start')" [selDate]="startDateNormal"></my-date-picker>
                         <input type="hidden" name="start_date" [(ngModel)]="startDateNormal" >
-                        <span class="errfield">{{startDate}}</span> 
+                        <ul class="error" *ngIf="errors['start_date']!=''" >
+                                <li *ngFor="let org_err of errors['start_date']">{{org_err}}</li>    
+                            </ul> 
                     </div>
                     <div class="form_row clearfix">
                         <label>Start Time<span class="indicates">*</span></label>
-                        <input type="text" id="eventstart-time" class="form-control"> 
+                        <input type="text" id="eventstart-time" class="form-control" [value]="showEventArr.start_time"> 
                         <input type="hidden" id="start-Time" name="start-Time">                      
-                        <span class="errfield">{{startTime}}</span>                        
+                        <ul class="error" *ngIf="errors['start_time']!=''" >
+                                <li *ngFor="let org_err of errors['start_time']">{{org_err}}</li>    
+                            </ul>                         
                     </div>
                     <div class="form_row clearfix">
                         <label>End Date<span class="indicates">*</span></label>                       
                         <my-date-picker [options]="myDatePickerOptions" (dateChanged)="onDateChanged($event,'end')" [selDate]="endDateNormal"></my-date-picker>
                         <input type="hidden" name="end_date" [(ngModel)]="endDateNormal"> 
-                        <span class="errfield">{{endDate}}</span> 
+                        <ul class="error" *ngIf="errors['end_date']!=''" >
+                                <li *ngFor="let org_err of errors['end_date']">{{org_err}}</li>    
+                            </ul>  
                     </div>
                     <div class="form_row clearfix">
                         <label>End Time<span class="indicates">*</span></label>                        
-                        <input type="text" id="eventend-time" class="form-control"> 
+                        <input type="text" id="eventend-time" class="form-control" [value]="showEventArr.end_time"> 
                         <input type="hidden" id="end-Time" name="end-Time">       
-                        <span class="errfield">{{end_timeErr}}</span> 
+                        <ul class="error" *ngIf="errors['end-time']!=''" >
+                                <li *ngFor="let org_err of errors['end_time']">{{org_err}}</li>    
+                            </ul>  
                     </div>
                     <div class="form_row clearfix">
                         <label>Website<span class="indicates">*</span></label>
                         <input type="url" [(ngModel)]="showEventArr.website" name="website" id="website" value="" class="form-control textfield" > 
-                        <span class="errfield">{{websiteErr}}</span> 
+                        <ul class="error" *ngIf="errors['website']!=''" >
+                                <li *ngFor="let org_err of errors['website']">{{org_err}}</li>    
+                            </ul>  
                     </div>
 
                 </div>
@@ -67,60 +82,76 @@
                          <ng-select name="countryList" (data)="countryArr"                                                      
                             [items]="countryArr"
                             (selected)="getState($event)"
+                            [active]="defaultCountry"
                             placeholder="No country selected">
                         </ng-select>
                         <input type="hidden" id="country" name="country" [(ngModel)]="country">    
-                        <span class="errfield">{{countryErr}}</span>
+                        <ul class="error" *ngIf="errors['country']!=''" >
+                                <li *ngFor="let org_err of errors['country']">{{org_err}}</li>    
+                            </ul> 
                     </div>
                     <div class="form_row clearfix">
                         <label>State<span class="indicates">*</span></label>                        
                        
                         <ng-select name="stateList" (data)="stateList"                                                      
                             [items]="stateList"
+                            [active]="defaultState"
                             (selected)="getCIty($event)"
                             placeholder="No state selected">
                         </ng-select>
                         <input type="hidden" id="state" name="state" [(ngModel)]="state"> 
-                        <span class="errfield">{{stateErr}}</span> 
+                         <ul class="error" *ngIf="errors['state']!=''" >
+                                <li *ngFor="let org_err of errors['state']">{{org_err}}</li>    
+                            </ul> 
                     </div>
                     <div class="form_row clearfix">
                         <label>City<span class="indicates">*</span></label>                        
                        
                         <ng-select name="cityList" (data)="cityList"                                                      
                             [items]="cityList"
+                            [active]="defaultCity"
                             (selected)="optionSelected($event,'city')"
                             placeholder="No city selected">
                         </ng-select>
                         <input type="hidden" id="city" name="city" [(ngModel)]="city"> 
-                        <span class="errfield">{{cityErr}}</span>
+                        <ul class="error" *ngIf="errors['city']!=''" >
+                                <li *ngFor="let org_err of errors['city']">{{org_err}}</li>    
+                            </ul> 
                     </div>
                     <div class="form_row clearfix">
                         <label>Organization<span class="indicates">*</span></label>
                         
                          <ng-select name="organizationList" (data)="organizationList"                                                       
                             [items]="organizationList"
+                            [active]="defaultOrg"
                             (selected)="optionSelected($event,'organization')"
                             placeholder="No organization selected">
                         </ng-select>
                         <input type="hidden" id="organization" name="organizers" [(ngModel)]="organizers">  
-                        <span class="errfield">{{organizationErr}}</span>                   
+                         <ul class="error" *ngIf="errors['organizers']!=''" >
+                                <li *ngFor="let org_err of errors['organizers']">{{org_err}}</li>    
+                            </ul>                   
                     </div>
                     <div class="form_row clearfix">
                         <label>Location<span class="indicates">*</span></label>
                         
-                        <ng-select name="locationList" (data)="venueList"                                                       
+                        <ng-select name="locationList" (data)="location"                                                       
                             [items]="venueList"
                             (selected)="optionSelected($event,'location')"
+                            [active]="defaultVenue"
                             placeholder="No location selected">
                         </ng-select>
                         <input type="hidden" id="location" name="location" [(ngModel)]="location">       
-                        <span class="errfield">{{locationErr}}</span>                
+                        <ul class="error" *ngIf="errors['venue_name']!=''" >
+                                <li *ngFor="let org_err of errors['venue_name']">{{org_err}}</li>    
+                            </ul>                 
                     </div>
                     <div class="form_row clearfix">
                         <label>Intended Audience:</label>
                         <div class="">                                            
                             <ng-select (data)="optionSelected($event,'audience')"
-                            [multiple]="true"                            
+                            [multiple]="true"
+                            [active]="showEventArr.audience"                            
                             [items]="audienceList">                            
                             </ng-select>
                            <input type="hidden" id="audience" name="audience" [(ngModel)]="audience">
@@ -129,7 +160,9 @@
                     <div class="form_row clearfix">
                         <label>Contact Info<span class="indicates">*</span></label>
                         <input type="tel" [(ngModel)]="showEventArr.contact_info"  name="contact_info" value="" class="form-control textfield">
-                        <span class="errfield">{{contact}}</span>                          
+                        <ul class="error" *ngIf="errors['contact_info']!=''" >
+                                <li *ngFor="let org_err of errors['contact_info']">{{org_err}}</li>    
+                            </ul>                           
                     </div>
                     <div class="form_row clearfix">
                         <label>Event Purpose</label>
@@ -140,7 +173,8 @@
                         <div class="">
                                          
                             <ng-select (data)="optionSelected($event,'keyword')"
-                            [multiple]="true"                            
+                            [multiple]="true"
+                            [active]="showEventArr.category_id"                            
                             [items]="keywordList">                            
                             </ng-select>
                            <input type="hidden" id="keyword" name="keyword" [(ngModel)]="keyword">
@@ -161,7 +195,7 @@
                     </div> -->
                     <div class="form_row ">                         
                         <button class="btn btn-info" type="submit" value="Save" name="submit">Save</button>                          
-                        <button class="btn btn-info" type="reset" value="Cancel" name="reset">Cancel</button>
+                        <button class="btn btn-info"  [routerLink]="['/my-events']" >Cancel</button>
                     </div>                    
                 </div>
             </form>
