--- a/src/app/assets/css/eventadd/eventadd.component.css
+++ b/src/app/assets/css/eventadd/eventadd.component.css
@@ -4,4 +4,16 @@
 .yellow {
     color: #ffce12;
 }
+#location-add label{
+	font-weight: normal;
+}
+.modal{
+	position: sticky;
+}
+.modal-header{
+margin-bottom: 20px;
+}
+.sebm-google-map-container {
+	height: 300px;
+}
 
