--- a/src/app/view/eventadd/eventadd.component.html
+++ b/src/app/view/eventadd/eventadd.component.html
@@ -117,6 +117,10 @@
                         <input type="hidden" id="location" name="location" [(ngModel)]="location">       
                         <span class="errfield">{{locationErr}}</span>                
                     </div>
+                    <div class='pull-right'>
+                        <button (click)="modal.open();" class="btn btn-success  btn-sm btn-square active pull-right add_button" type="button" title="add location"><span aria-hidden="true" class="glyphicon glyphicon-plus"></span>
+                        </button>                           
+                    </div>
                     <div class="form_row clearfix">
                         <label>Intended Audience:</label>
                         <div class="">                                            
@@ -161,6 +165,161 @@
                     </div>                    
                 </div>
             </form>
+
+            <modal #modal> 
+            <modal-header><h4 class="modal-title">Add Location</h4></modal-header>             
+                    <form name="location-add" id="location-add" #addLocationForm="ngForm" (ngSubmit)="submitLocation(addLocationForm.value)">  
+                      
+                       <div class="form-group col-md-12">
+                            <div class="col-md-3 col-md-offset-1">
+                                <label class="control-label">Name *</label>
+                            </div>
+                            <div class="col-md-7">
+                                <input type="text" [(ngModel)]="venue_name" name="venue_name" class="form-control" id='venue_name'>
+                                 <span class="errfield">{{venue_nameErr}}</span>                              
+                            </div>
+                        </div>
+
+                        <div class="form-group col-md-12">
+                            <div class="col-md-3 col-md-offset-1">
+                                <label for="message-text" class="control-label">Description</label>
+                            </div>
+                            <div class="col-md-7">
+                                <textarea class="form-control" [(ngModel)]="venue_description" name="venue_description" id='venue_description'></textarea>
+                                 <span class="errfield">{{venue_descriptionErr}}</span> 
+                            </div>
+                        </div>                    
+
+                      <div id="images_div">
+                            <div class="form-group col-md-12">
+                                <div class="col-md-3 col-md-offset-1">
+                                    <label for="message-text" class="control-label">Image</label>
+                                </div>
+                                <div class="col-md-5">
+                                    <input type="file" name="venue_image[]" class="form-control">
+                                    <ul class="parsley-errors-list"></ul>
+                                </div>
+                                <div class="col-md-2 col-sm-1 col-xs-2">
+                                    <button class="btn btn-success btn-xs btn-square" id="add_more" type="button"><span aria-hidden="true" class="fa fa-plus">Add More</span>
+                                    </button></div>
+
+                            </div>
+                       </div>                    
+
+                    <div class="form-group col-md-12">
+                        <div class="col-md-3 col-md-offset-1">
+                            <label class="control-label">Country *</label>
+                        </div>
+                        <div class="col-md-7">
+                            <ng-select id="countryList" name="countryList" (data)="countryArr"                                                      
+                            [items]="countryArr"
+                            (selected)="getState($event)"
+                            placeholder="No country selected">
+                            </ng-select>
+                            <input type="hidden" id="country" name="country" [(ngModel)]="country">    
+                            <span class="errfield">{{countryErr}}</span>
+                        </div>
+                    </div>
+                    
+                     <div class="form-group col-md-12">
+                            <div class="col-md-3 col-md-offset-1">
+                                <label class="control-label">State *</label>
+                            </div>
+                            <div class="col-md-7">
+                                <ng-select id="stateList" name="stateList" (data)="stateList"                                                      
+                                [items]="stateList"
+                                (selected)="getCIty($event)"
+                                placeholder="No state selected">
+                               </ng-select>
+                               <input type="hidden" id="state" name="state" [(ngModel)]="state"> 
+                               <span class="errfield">{{stateErr}}</span>   
+                            </div>
+                    </div>
+
+                    <div class="form-group col-md-12">
+                        <div class="col-md-3 col-md-offset-1">
+                            <label for="message-text" class="control-label">City *</label>
+                        </div>
+                        <div class="col-md-7">
+                           <ng-select id="cityList" name="cityList" (data)="cityList"                                                      
+                            [items]="cityList"
+                            (selected)="optionSelected($event,'city')"
+                            placeholder="No city selected">
+                           </ng-select>
+                           <input type="hidden" id="city" name="city" [(ngModel)]="city"> 
+                           <span class="errfield">{{cityErr}}</span>
+                        </div>
+                    </div>
+                    
+                       <div class="form_row clearfix">
+                            <div class="col-md-3 col-md-offset-1">
+                                <label for="message-text" class="control-label">Address *</label>
+                            </div>
+                            <div class="col-md-6">
+                                <textarea class="form-control" [(ngModel)]="address" name="address" id='address'>address</textarea>
+                                <span class="errfield">{{addressErr}}</span>
+                            </div>
+                            <button class="btn btn-success  btn-xs btn-square active add_map" (click)="getLatLong(addLocationForm.value);" type="button">
+                                <span aria-hidden="true" class="fa fa-location-arrow"></span>
+                            </button>
+                        </div>
+                        
+                        <div class="form-group col-md-12">
+                            <div class="col-md-3 col-md-offset-1">
+                                <label class="control-label">Latitude *</label>
+                            </div>
+                            <div class="col-md-7">
+                                <input type="text" [(ngModel)]="venueArr.latitude" name="latitude" class="form-control" id='latitude'>
+                                <span class="errfield">{{latitudeErr}}</span>
+                            </div>
+                        </div>
+                     
+                         <div class="form-group col-md-12">
+                            <div class="col-md-3 col-md-offset-1">
+                                <label class="control-label">Longitude*</label>
+                            </div>
+                            <div class="col-md-7">
+                                <input type="text" [(ngModel)]="venueArr.longitude" name="longitude" class="form-control" id='longitude'>
+                                <span class="errfield">{{longitudeErr}}</span>
+                            </div>
+                        </div>      
+                               
+                        <span style="color: red;font-size: 13px;">{{locationFinder}}</span>
+                        <div class="form-group col-md-12 map_div" style="display:none">
+                            <div class="col-md-3 col-md-offset-1">
+                                <label for="message-text" class="control-label">Map</label>
+                            </div>
+                            <div class="col-md-7">                           
+                            <sebm-google-map [latitude]="venueArr.latitude" [longitude]="venueArr.longitude">
+                                <sebm-google-map-marker [latitude]="venueArr.latitude" [longitude]="venueArr.longitude"></sebm-google-map-marker>
+                            </sebm-google-map>
+                            </div>
+                        </div>
+
+                        <div class="clearfix"></div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-default" data-dismiss="modal" (click)="modal.dismiss()">Cancel</button>
+                            <!--<button type="button" class="btn btn-primary" (click)="modal.close()">Save</button>-->  
+                            <button class="btn btn-info" type="submit" value="Save" name="venue_submit">Save</button>  
+                        </div>
+                  
+                    </form>                       
+                    
+                </modal>
+
+                <div class="form-group col-md-12"  id="add_more_div" hidden="">
+                    <div class="col-md-2 col-md-offset-1">
+                        <label for="message-text" class="control-label"></label>
+                    </div>
+                    <div class="col-md-6 col-md-offset-1">
+                        <input type="file" name="venue_image[]" class="form-control">
+                        <ul class="parsley-errors-list"></ul>
+                    </div>
+                    <div class="col-md-2 col-sm-1 col-xs-2">
+                        <button class="btn btn-danger btn-xs btn-square" id="remove_image" type="button"><span aria-hidden="true" class="fa fa-minus"></span>
+                        </button></div>
+                </div>
+
         </div>
         <!-- #content --> 
 
