Commented location addition button

--- a/src/app/view/eventadd/eventadd.component.html
+++ b/src/app/view/eventadd/eventadd.component.html
@@ -117,10 +117,10 @@
                         <input type="hidden" id="location" name="location" [(ngModel)]="location">       
                         <span class="errfield">{{locationErr}}</span>                
                     </div>
-                    <div class='pull-right'>
+                    <!--<div class='pull-right'>
                         <button (click)="modal.open();" class="btn btn-success  btn-sm btn-square active pull-right add_button" type="button" title="add location"><span aria-hidden="true" class="glyphicon glyphicon-plus"></span>
                         </button>                           
-                    </div>
+                    </div>-->
                     <div class="form_row clearfix">
                         <label>Intended Audience:</label>
                         <div class="">                                            
